--- a/activflow/templates/registration/login.html
+++ b/activflow/templates/registration/login.html
@@ -1,21 +1,16 @@
 {% extends "base.html" %}
+{% block title %} <title>ActivFlow - Login</title> {% endblock %}
+{% block breadcrumb %}
+<ol class="breadcrumb">
+  <li><a href="#">Home</a></li>
+  <li class="active">Log In</li>
+</ol>
+{% endblock %}
 {% block main_content %}
 <div class="login_forms">
     <form method="post" action=".">
       {% csrf_token %} 
-      <div id="form_non_errors"></div>
-    
-    {% if form.errors %}
-    <div class="alert alert-error">
-        <button type="button" class="close" data-dismiss="alert">×</button>
-        {% for field in form %} 
-            {% if field.errors %}
-            <li>{{ field.label }}: {{ field.errors|striptags }}</li>
-            {% endif %}
-        {% endfor %}
-    </div>
-    {% endif %}
-
+      {{ form.non_field_errors }}
       <div class="form-group">
             <div id="label"><label for="id_username">Username:</label></div>
             <div id="input">{{ form.username }}</div>
@@ -24,9 +19,7 @@
             <div id="label"><label for="id_email">Password:</label></div>
             <div id="input">{{ form.password }}</div>
       </div>
-
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
 </div>
-
 {% endblock %}
