cosmetic changes to main workflow template

--- a/activflow/templates/base.html
+++ b/activflow/templates/base.html
@@ -45,7 +45,7 @@
             <li class="active"><a href="{% url 'workflows' %}">Home</a></li>
             <li class="dropdown">
         </li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#workflows">Workflows</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
           {% if user.is_authenticated %}
