--- a/activflow/templates/core/workflow.html
+++ b/activflow/templates/core/workflow.html
@@ -68,7 +68,7 @@
 					<td>{{task.last_updated}}</td>
 					{% activity_title task.activity_ref app_title as act_title %}
 					<td>
-						{% with identifier=task.activity|default:None %}
+						{% with identifier=task.activity.id|default:None %}
 						<a class="btn btn-info btn-xs {% if not task.can_view_activity %} disabled {% endif %}" href="{% url 'view' app_title act_title identifier %}"><span class="glyphicon glyphicon glyphicon-check"></span> View</a>
 						<a class="btn btn-success btn-xs {% if not task.can_initiate_activity %} disabled {% endif %}" href="{% url 'create' app_title act_title task.id %}"><span class="glyphicon glyphicon glyphicon-pencil"></span> Initiate</a>
 						<a class="btn btn-primary btn-xs {% if not task.can_revise_activity %} disabled {% endif %}" href="{% url 'update' app_title act_title identifier %}"><span class="glyphicon glyphicon glyphicon-edit"></span> Revise</a>
