--- a/activflow/templates/core/widgets/form.html
+++ b/activflow/templates/core/widgets/form.html
@@ -8,6 +8,24 @@
     </div>
 </fieldset>
 {% endfor %}
+
+{% for formset in formsets %}
+<fieldset class="form-group">
+    <label class="col-sm-2 control-label">{{ formset.form.instance.title }}:</label>
+</fieldset>
+{% for form in formset %}
+{{ formset.management_form }}
+{% for field in form %}
+<fieldset class="form-group">
+    {{ field|label_with_class:"col-sm-2 control-label" }}
+    <div class="col-sm-10">
+        {{ field }}
+    </div>
+</fieldset>
+{% endfor %}
+{% endfor %}
+{% endfor %}
+
 {% wysiwyg_form_fields as wysuwyg_fields %}
 {% for wysuwyg_field in wysuwyg_fields %}
     <script type="text/javascript">CKEDITOR.replace('id_{{wysuwyg_field}}')</script>
