--- a/activflow/templates/core/widgets/form.html
+++ b/activflow/templates/core/widgets/form.html
@@ -14,26 +14,24 @@
     <label class="col-sm-2 control-label">{{ formset.form.instance.title }}:</label>
 </fieldset>
 {{ formset.management_form }}
-  <script type="text/javascript">
-    $(function() {
-        $('#{{formset.form.instance.title}}').formset({
-            prefix: '{{formset.form.instance.title}}Form',
-            formCssClass: 'dynamic-{{formset.form.instance.title}}Form'
-        });
-    });
-  </script>
 {% for form in formset %}
-<div {% if forloop.last %} id={{formset.form.instance.title}} {% endif %}>
-    {% for field in form %}
-    <fieldset class="form-group">
-        {{ field|label_with_class:"col-sm-2 control-label" }}
-        <div class="col-sm-10">
-            {{ field }}
-        </div>
-    </fieldset>
-    {% endfor %}
+<!--{% if form.instance.pk %}{{ form.DELETE }}{% endif %}-->
+<div class="panel panel-default">
+    <div class="panel-heading">Panel heading without title</div>
+    <div class="panel-body">
+        {% for field in form %}
+        <fieldset class="form-group">
+            {{ field|label_with_class:"col-sm-2 control-label" }}
+            <div class="col-sm-10">
+                {{ field }}
+            </div>
+        </fieldset>
+        {% endfor %}
     </div>
-
+</div>
+{% if forloop.last %}
+<input title='Add' type='submit' name='add-{{formset.form.instance.title}}' value='Add' />
+{% endif %}
 {% endfor %}
 {% endfor %}
 
